--- a/Athletics/Base.lproj/LaunchScreen.storyboard
+++ b/Athletics/Base.lproj/LaunchScreen.storyboard
@@ -18,16 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Default-736h@3x.png" translatesAutoresizingMaskIntoConstraints="NO" id="CnG-Ff-HOT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Default-736h@3x.png" translatesAutoresizingMaskIntoConstraints="NO" id="3xz-95-c9E">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="CnG-Ff-HOT" secondAttribute="trailing" constant="-20" id="15G-Kc-JEV"/>
-                            <constraint firstItem="CnG-Ff-HOT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="LDb-en-jv4"/>
-                            <constraint firstItem="CnG-Ff-HOT" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="Ogl-9B-Nvd"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="CnG-Ff-HOT" secondAttribute="bottom" id="heH-Q2-hja"/>
+                            <constraint firstAttribute="trailing" secondItem="3xz-95-c9E" secondAttribute="trailing" id="Rde-YK-ven"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="3xz-95-c9E" secondAttribute="bottom" id="k3Y-jU-c2U"/>
+                            <constraint firstItem="3xz-95-c9E" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="l5u-0W-Omh"/>
+                            <constraint firstItem="3xz-95-c9E" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="lCw-Tf-AJk"/>
                         </constraints>
                     </view>
                 </viewController>
